# minesweeper

./: CMakeLists.txt  README.md  main.cpp
Miner/: CMakeLists.txt  mine.rc  miner.cpp  miner.h  resource.h
